--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ Django==3.1
 django-filter==2.3.0
 djangorestframework==3.11.1
 djangorestframework-jsonapi==3.1.0
+geographiclib==1.50
+geopy==2.0.0
 inflection==0.5.0
 isort==4.3.21
 lazy-object-proxy==1.4.3
@@ -12,6 +14,8 @@ mccabe==0.6.1
 psycopg2==2.8.5
 pycodestyle==2.6.0
 pylint==2.5.3
+pylint-django==2.3.0
+pylint-plugin-utils==0.6
 pytz==2020.1
 six==1.15.0
 sqlparse==0.3.1
